--- a/ProNet_Sotfware_Services/index.html
+++ b/ProNet_Sotfware_Services/index.html
@@ -33,6 +33,7 @@
         nav.classList.toggle("abajo", window.scrollY > 0);
       });
     </script>
+    <link rel="icon" href="./img/logo.png">
   </head>
 
   <body class="grid-container">
