ultimo cambio final de verdad

--- a/ProNet_Sotfware_Services/index.html
+++ b/ProNet_Sotfware_Services/index.html
@@ -146,7 +146,7 @@
         <div class="box">
           <figure>
             <a href="#">
-              <img src="../ProNet_Sotfware_Services/img/logo.png" alt="Logo de la empresa" />
+              <img src="../img/logo.png" alt="Logo de la empresa" />
             </a>
           </figure>
         </div>
