ultimos cambios en los terminos y condiciones

--- a/ProNet_Sotfware_Services/index.html
+++ b/ProNet_Sotfware_Services/index.html
@@ -156,7 +156,7 @@
            Somos una compañia con personas que han liderado grandes proyectos en el desarrollo de software.
           </p>
           <p>
-            Ingenieros como: <b>Jesus Cordero, Yoner isaza, Endrys medina,Luis alejandro,Luis David, alvaro Garrido, Glenn Oñate</b> son nuestro fuerte en nuestra empresa. 
+            Ingenieros como: <b>Jesus Cordero, Yoner isaza, Endrys mieles,Luis vides,Luis David, alvaro Garrido, Glenn Oñate, Antonio ceballos</b> son nuestro fuerte en nuestra empresa. 
           </p>
         </div>
         <div class="box">
