--- a/ProNet_Sotfware_Services/pages/Terminos.html
+++ b/ProNet_Sotfware_Services/pages/Terminos.html
@@ -1,80 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProNet Services</title>
-    <link rel="icon" href="../img/logo.png">
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-xpN9EXCEvNka0CQsBj8kV4ATmTujVa/8jhrhGm+kzLkaeNp1eXdJFvtG4E+bvL+9XaAzAPq4K+drCKptiCsMTw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../css/terminos.css" />
-    <link rel="stylesheet" href="../css/header.css" />
-    <link rel="stylesheet" href="../css/nav.css" />
-    <link rel="stylesheet" href="../css/footer.css" />
-    <script
-      src="https://kit.fontawesome.com/eb496ab1a0.js"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      window.addEventListener("scroll", function () {
-        var nav = document.querySelector("nav");
-        nav.classList.toggle("abajo", window.scrollY > 0);
-      });
-    </script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ProNet Services</title>
+  <link rel="icon" href="../img/logo.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-xpN9EXCEvNka0CQsBj8kV4ATmTujVa/8jhrhGm+kzLkaeNp1eXdJFvtG4E+bvL+9XaAzAPq4K+drCKptiCsMTw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <body class="grid-container">
-    <header class="header">
-      <div class="content-header">
-        <div class="titulo">
-          <h1>WELCOME <br />TO PRONET SERVICES</h1>
-          <h2>Una empresa dedicada en la calidad del sofware</h2>
-        </div>
-        <img
-          src="https://amincodes.com/html/flex-it/assets/images/hero/illustration-1.png"
-          alt=""
-        />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../css/terminos.css" />
+  <link rel="stylesheet" href="../css/header.css" />
+  <link rel="stylesheet" href="../css/nav.css" />
+  <link rel="stylesheet" href="../css/footer.css" />
+  <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+  <script>
+    window.addEventListener("scroll", function () {
+      var nav = document.querySelector("nav");
+      nav.classList.toggle("abajo", window.scrollY > 0);
+    });
+  </script>
+</head>
+
+<body class="grid-container">
+  <header class="header">
+    <div class="content-header">
+      <div class="titulo">
+        <h1>WELCOME <br />TO PRONET SERVICES</h1>
+        <h2>Una empresa dedicada en la calidad del sofware</h2>
       </div>
-    </header>
-    <nav class="nav-menu">
-      <input type="checkbox" id="check" />
-      <label for="check" class="checkbtn">
-        <i class="menu-icon"><img src="../svg/menu-svgrepo-com.svg" /></i>
-      </label>
-      <a href="#" class="title">ProNet Services</a>
-      <ul>
-        <li>
-          <a href="../index.html">Inicio</a>
-        </li>
-        <li>
-          <a href="#">Nosotros</a>
-        </li>
-        <li>
-          <a href="#">Servicios</a>
-        </li>
-        <li>
-          <a href="#">Terminos Legales</a>
-        </li>
-        <li>
-          <a href="#r">Contacto</a>
-        </li>
-      </ul>
-    </nav>
-    <article class="main">
-      
+      <img src="https://amincodes.com/html/flex-it/assets/images/hero/illustration-1.png" alt="" />
+    </div>
+  </header>
+  <nav class="nav-menu">
+    <input type="checkbox" id="check" />
+    <label for="check" class="checkbtn">
+      <i class="menu-icon"><img src="../svg/menu-svgrepo-com.svg" /></i>
+    </label>
+    <a href="#" class="title">ProNet Services</a>
+    <ul>
+      <li>
+        <a href="../index.html">Inicio</a>
+      </li>
+      <li>
+        <a href="#">Nosotros</a>
+      </li>
+      <li>
+        <a href="#">Servicios</a>
+      </li>
+      <li>
+        <a href="#">Terminos Legales</a>
+      </li>
+      <li>
+        <a href="#r">Contacto</a>
+      </li>
+    </ul>
+  </nav>
+  <article class="main">
+
     <div class="container-tyc">
       <div class="tyc-title">
         <h2>LEGALIDAD DE LA EMPRESA, COMO OPERAMOS</h2>
@@ -86,7 +74,11 @@
         <div class="tyc-2">
           <div class="tyc-it-e">
             <h3>NUESTROS ESTATUTOS</h3>
-            <p>Los estatutos de nuestra empresa con fines de lucro, PRO NET SERVICES, establecen cómo gobernamos y estructuramos nuestras operaciones en el apasionante mundo de las nuevas tecnologías. Además, nos comprometemos a implementar un seguimiento constante en línea con las políticas del Ministerio de las TIC para impulsar la innovación y el desarrollo tecnológico en beneficio de nuestros clientes y del crecimiento del sector.</p>
+            <p>Los estatutos de nuestra empresa con fines de lucro, PRO NET SERVICES, establecen cómo gobernamos y
+              estructuramos nuestras operaciones en el apasionante mundo de las nuevas tecnologías. Además, nos
+              comprometemos a implementar un seguimiento constante en línea con las políticas del Ministerio de las TIC
+              para impulsar la innovación y el desarrollo tecnológico en beneficio de nuestros clientes y del
+              crecimiento del sector.</p>
           </div>
           <div class="tyc-it">
             <h3>RAZON SOCIAL</h3>
@@ -96,48 +88,47 @@
             <h3>OBJETIVOS DEL GRUPO</h3>
             <p>
               Objetivo general:
-              Establecer una empresa la cual brinda servicios de desarrollo de software en la ciudad de Riohacha, esto es dependiendo puede ser para la ciudad o para la guajira, colombia o el mundo.
-            </p>
+              Establecer una empresa la cual brinda servicios de desarrollo de software de alta calidad para todo tipo de proyectos, con vision a nivel global.</p>
           </div>
         </div>
       </div>
+    </div>
+
+  </article>
+  <footer class="footer" id="r">
+    <div class="grupo-1">
+      <div class="box">
+        <figure>
+          <a href="#">
+            <img src="../img/logo.png" alt="Logo de la empresa" />
+          </a>
+        </figure>
       </div>
-      
-    </article>
-    <footer class="footer" id="r">
-      <div class="grupo-1">
-        <div class="box">
-          <figure>
-            <a href="#">
-              <img src="../img/logo.png" alt="Logo de la empresa" />
-            </a>
-          </figure>
-        </div>
-        <div class="box til">
-          <h2>SOBRE NOSOTROS</h2>
-          <p>
-           Somos una compañia con personas que han liderado grandes proyectos en el desarrollo de software.
-          </p>
-          <p>
-            Ingenieros como: <b>Jesus Cordero, Yoner isaza, Endrys medina,Luis alejandro,Luis David, alvaro Garrido, Glenn Oñate</b> son nuestro fuerte en nuestra empresa. 
-          </p>
-        </div>
-        <div class="box">
-          <h2>SIGUENOS</h2>
-          <div class="red-social">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-youtube"></a>
-          </div>
+      <div class="box til">
+        <h2>SOBRE NOSOTROS</h2>
+        <p>
+          Somos una compañia con personas que han liderado grandes proyectos en el desarrollo de software.
+        </p>
+        <p>
+          Ingenieros como: <b>Jesus Cordero, Yoner isaza, Endrys mieles,Luis vides,Luis David, alvaro Garrido, Glenn
+            Oñate, Antonio ceballos</b> son nuestro fuerte en nuestra empresa.
+        </p>
+      </div>
+      <div class="box">
+        <h2>SIGUENOS</h2>
+        <div class="red-social">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-instagram"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-youtube"></a>
         </div>
       </div>
-      <div class="grupo-2">
-        <small
-          >&copy; 2023 <b>ProNet Services</b> - Todos los Derechos
-          Reservados.</small
-        >
-      </div>
-    </footer>
-  </body>
+    </div>
+    <div class="grupo-2">
+      <small>&copy; 2023 <b>ProNet Services</b> - Todos los Derechos
+        Reservados.</small>
+    </div>
+  </footer>
+</body>
+
 </html>
